kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rf-service
spec:
  type: LoadBalancer
  selector:
    app: rf-file-upload
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
